Fix text cut off for header

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -97,6 +97,7 @@ header {
 .player__info {
   position: relative;
   top: -6px;
+  height: 120%;
   overflow: hidden;
   text-overflow: ellipsis;
 
